feat: refactor exception handling and improve code readability in authentication classes